# fec_control

./: .gitignore  MainWindow.py  MainWindow.ui  README.md  TODO.txt  circle.py  fec.py  gen.py  main.py  pyproject.toml  rt.py  sampa_fit.py  test_new_filestructure.py  test_sampafit3.py  test_telnet_thread.py  waveform.py  waveform_window.py  workers.py
src/: main.py
src/app/: config.py  init.py
src/app/logic/: fec.py  gen.py  (+3 more)
temp/: 1-385.pll  1-454.pll  4_RMS_ERROR  FEC Control.spec  output.txt  pll.txt  rcu_ip.json  roc_link_map_N.json  roc_link_map_W.json
temp/INP_ROC/: 2024-09-11 12_53_50.322374_w.xlsx  2024-09-11 13_10_14.540067_N.xlsx  2024-09-11 13_44_14.390268_N.xlsx  2024-09-11 13_54_21.855410_N.xlsx  2024-09-11 14_10_27.340187_W.xlsx  2024-09-12_13-07-20_N.xlsx  2024-09-12_13-21-14_W.xlsx
temp/arkolab/: 2024-04-10 12_51_48.928774.xlsx  2024-04-10 13_10_08.323722.xlsx  2024-04-10 13_26_21.049271.xlsx  2024-04-10 13_40_29.041999.xlsx  2024-04-10 13_55_22.272749.xlsx  2024-04-10 14_10_42.028187.xlsx  2024-04-10 14_25_36.531946.xlsx  2024-04-10 14_41_05.136632.xlsx  2024-04-11 09_22_20.272150.xlsx  2024-04-11 10_49_12.023847.xlsx  2024-04-11 11_49_32.029108.xlsx  2024-04-11 15_08_44.889841.xlsx  2024-04-11 15_32_19.762855.xlsx  2024-04-11 16_22_44.288511.xlsx  2024-04-11 17_52_38.882896.xlsx  2024-04-11 18_04_20.367398.xlsx  2024-04-12 10_18_26.633893.xlsx  2024-04-12 12_25_02.138104.xlsx  2024-04-12 13_50_49.885163.xlsx  2024-04-12 13_52_35.089224.xlsx  2024-04-12 14_28_54.689651_w.xlsx  2024-04-15 09_40_01.411903_w.xlsx  2024-04-15 09_48_38.044424_w.xlsx  (+1 more)
(+27 files in other folders)
