[tool.poetry]
name = "fec-control"
version = "0.1.0"
description = ""
authors = ["Yaroslav Galkin <galkinyaroslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
pyside6 = "^6.6.1"
scipy = "^1.12.0"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.1"
pyinstaller = "^6.5.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
