[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Yaroslav Galkin", email = "galkinyaroslav@gmail.com"},
]
requires-python = "<3.13,>=3.9"
dependencies = [
    "pandas<3.0.0,>=2.2.0",
    "matplotlib<4.0.0,>=3.8.2",
    "numpy<2.0.0,>=1.26.3",
    "pyside6<7.0.0,>=6.6.1",
    "scipy<2.0.0,>=1.12.0",
    "pyvisa<2.0.0,>=1.14.1",
    "pyvisa-py<1.0.0,>=0.7.1",
    "pyinstaller<7.0.0,>=6.5.0",
    "openpyxl<4.0.0,>=3.1.2",
    "jsonschema<5.0.0,>=4.23.0",
    "colorama>=0.4.6",
]
name = "fec-control"
version = "0.1.0"
description = ""
readme = "README.md"
